Enhance Cors config